Commented the code and added msg language properties. Managed rental requests (view and reject) tenant side in JavaFX version. Also, managed the account properties section on the CLI side